--- a/index.html
+++ b/index.html
@@ -192,6 +192,21 @@
                 padding: 20px;
             }
         }
+
+        .footer-links {
+            margin-top: 10px;
+        }
+        
+        .footer-links a {
+            color: white;
+            text-decoration: none;
+            opacity: 0.8;
+            transition: opacity 0.3s;
+        }
+        
+        .footer-links a:hover {
+            opacity: 1;
+        }
     </style>
 </head>
 <body>
@@ -215,6 +230,10 @@
 
         <footer>
             <p>© 2024 GeoQuiz - Learn Geography. All rights reserved.</p>
+            <div class="footer-links">
+                <a href="privacy.html">Privacy Policy</a> • 
+                <a href="terms.html">Terms of Service</a>
+            </div>
         </footer>
     </div>
 </body>
