Minor update Privacy and Terms

--- a/privacy.html
+++ b/privacy.html
@@ -20,7 +20,7 @@
                 <h3>Information We Collect</h3>
                 <ul>
                     <li><strong>Analytics Data:</strong> Usage statistics and app performance metrics</li>
-                    <li><strong>Purchase History:</strong> Records of in-app purchases through RevenueCat</li>
+                    <li><strong>Purchase History:</strong> Records of in-app purchases through RevenueCat & Superwall</li>
                     <li><strong>Advertising IDs:</strong> For personalized advertisements through Google AdMob</li>
                     <li><strong>Game Progress:</strong> Stored locally on your device</li>
                     <li><strong>Language Preference:</strong> Your selected app language</li>
